@@ -166,11 +166,8 @@ fi
 
 replace_all doc/README
 replace_all nsd.8.in
-replace_all nsdc.8.in
-replace_all nsd-notify.8.in
+replace_all nsd-control.8.in
 replace_all nsd-checkconf.8.in
-replace_all nsd-patch.8.in
-replace_all nsd-xfer.8.in
 replace_all nsd.conf.5.in
 
 info "Renaming NSD directory to nsd-$version."
